# vibe-manager

./: .gitignore  CLAUDE.md  Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: data-model.md  implementation-status.md  product-vision.md  research-analysis-great-manager-attributes.md  roadmap.md  user-stories.md
docs/R&D Career Path/: Career Path Definition.html
docs/features/: 1on1-management.md  1on1-notes.md  career-tracking.md  health-tracking.md  knowledge-base.md  managing-managers.md  team-overview.md
docs/sources/: 1on1-best-practices.md  career-frameworks.md  competitor-analysis.md  engagement-metrics.md  note-organization.md
src/: app.rs  editor.rs  lib.rs  main.rs
src/app/: input.rs  mod.rs  state.rs  update.rs
src/components/: avatar.rs  dashboard.rs  delete_modal.rs  doorway_card.rs  engineer_detail.rs  entry_modal.rs  mod.rs  modal.rs  mood_chart.rs  note_editor.rs  note_viewer.rs  report_detail.rs  status_bar.rs
src/model/: computed.rs  engineer.rs  meeting.rs  mod.rs  report.rs  workspace.rs
src/storage/: meeting.rs  mod.rs  profile.rs  workspace.rs
src/theme/: mod.rs  rpg.rs  sprites.rs
src/utils/: mod.rs  name.rs  slug.rs
src/views/: dashboard_view.rs  detail_view.rs  mod.rs
tests/: app_test.rs  storage_test.rs  ui_test.rs
tests/fixtures/: .vibe-manager
tests/snapshots/: ui_test__doorway_card_healthy_squad.snap  (+7 more)
(+52 files in other folders)
